home section navbar section and image folder

--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+    <!---Header Design-->
+    <header class="header">
+        <a href="#" class="logo">FBS<span>Logo</span></a>
+        <!--menu bar icon-->
+        <i class="fas fa-bars" id="menu-icon"></i>
+        <nav class="navbar">
+            <a href="#home" class="linknavbaractive">Home</a>
+            <a href="#about" class="linknavbar">About</a>
+            <a href="#educational" class="linknavbar">Educational</a>
+            <a href="#skill" class="linknavbar">Skills</a>
+            <a href="contactus" class="linknavbar">Contact Us</a>
+            <a class="linknavbar">Dark Mode</a>
+        </nav>
+    </header>
+
+    <!--Home section design-->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Hi, I'm <span class="myname">Ferdenand Bayadas</span></h1>
+            <div class="text-animated">
+                <h3>Web Developer</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore molestias aperiam, sit ratione ea odio eos 
+                    facere iusto autem pariatur voluptatem itaque ducimus, temporibus tempore ad velit! Aliquam, 
+                    temporibus repellat.</p>
+                    <div class="btn-box">
+                        <a href="#" class="btn">CV</a>
+                        <a href="#" class="btn">Let's Talk</a>
+                    </div>
+            </div>
+        </div>
+        <div class="home-sci">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-google"></i></a>
+        </div>
+        <div class="home-imageHover"></div>
+    </section>
+
+
+
+    <script src="index.js">
+
+    </script>
     
 </body>
 </html>
