Edcuational Section with design

--- a/index.html
+++ b/index.html
@@ -61,7 +61,68 @@
         <div class="btn-box btns">
             <a href="" class="btn">Read More</a>
         </div>
-
+    </section>
+    <!--Educational Section and Design-->
+    <section class="education" id="educational">
+        <h2 class="heading">My<span>Journey</span></h2>
+        <div class="educational-row">
+            <div class="educational-column">
+                <h3 class="title">Educational Background</h3>
+                <div class="educational-box">
+                    <div class="educational-content">
+                        <div class="content">
+                            <div class="year">
+                                <i class="fas fa-calendar"></i> 2021-2025</div>
+                                <h3>Bachelor's Science Information Technology - Informatics College Manila</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolor error numquam atque laudantium, molestias corporis obcaecati necessitatibus, quo facere in tempora, quidem ab molestiae ipsum sequi nam rerum placeat!</p>
+                        </div>
+                    </div>
+                     <div class="educational-content">
+                        <div class="content">
+                            <div class="year">
+                                <i class="fas fa-calendar"></i>May 31,2025</div>
+                                <h3>Beginnin Python - MSTCONNECT PH CONSULTANCY ENTERPRISES </h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolor error numquam atque laudantium, molestias corporis obcaecati necessitatibus, quo facere in tempora, quidem ab molestiae ipsum sequi nam rerum placeat!</p>
+                        </div>
+                    </div>
+                       <div class="educational-content">
+                        <div class="content">
+                            <div class="year">
+                                <i class="fas fa-calendar"></i>June 03,2025</div>
+                                <h3>ISO 27001 Information Security Management System - Programming Computer Programming Services</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolor error numquam atque laudantium, molestias corporis obcaecati necessitatibus, quo facere in tempora, quidem ab molestiae ipsum sequi nam rerum placeat!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="educational-column">
+                <h3 class="title">Experience</h3>
+                <div class="educational-box">
+                    <div class="educational-content">
+                        <div class="content">
+                            <div class="year">
+                                <i class="fas fa-calendar"></i> 2024-2025</div>
+                                <h3>Web Developer for School Project - Informatics College Manila</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolor error numquam atque laudantium, molestias corporis obcaecati necessitatibus, quo facere in tempora, quidem ab molestiae ipsum sequi nam rerum placeat!</p>
+                        </div>
+                    </div>
+                      <div class="educational-content">
+                        <div class="content">
+                            <div class="year">
+                                <i class="fas fa-calendar"></i> 2024-2025</div>
+                                <h3>Web Developer for School Project - Informatics College Manila</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolor error numquam atque laudantium, molestias corporis obcaecati necessitatibus, quo facere in tempora, quidem ab molestiae ipsum sequi nam rerum placeat!</p>
+                        </div>
+                    </div>
+                      <div class="educational-content">
+                        <div class="content">
+                            <div class="year">
+                                <i class="fas fa-calendar"></i> 2024-2025</div>
+                                <h3>Web Developer for School Project - Informatics College Manila</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolor error numquam atque laudantium, molestias corporis obcaecati necessitatibus, quo facere in tempora, quidem ab molestiae ipsum sequi nam rerum placeat!</p>
+                        </div>
+                    </div>
+        </div>
     </section>
 
 
