--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="about" id="about">
         <h2 class="heading">About<span>Me</span></h2>
         <div class="img-about">
-            <img src="/img/img.jpg" alt="">
+            <img src="/portfolioformobileandweb/img/img.jpg" alt="">
             <span class="circle-spin"></span>
         </div>
         <div class="about-content">
