--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#about" class="linknavbar">About</a>
             <a href="#educational" class="linknavbar">Educational</a>
             <a href="#skill" class="linknavbar">Skills</a>
-            <a href="contactus" class="linknavbar">Contact Us</a>
+            <a href="#contactus" class="linknavbar">Contact Us</a>
             <a class="linknavbar">Dark Mode</a>
         </nav>
     </header>
@@ -124,8 +124,72 @@
                     </div>
         </div>
     </section>
+    <!---Skill Section and Desgn-->
+    <section class="skill" id="skill">
+        <h2 class="heading">My<span>Skill</span></h2>
+        <div class="skills-row">
+            <div class="skills-column">
+                <h3 class="title">Coding Skills</h3>
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>HTMLS <span>20%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                         <div class="progress">
+                            <h3>CSS<span>10%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>JAVASCRIPT<span>5%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>PYTHON DJANGO<span>30%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>MYSQL<span>50%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+             <div class="skills-column">
+                <h3 class="title">Professional Skills</h3>
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>Excel<span>70%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                         <div class="progress">
+                            <h3>Word<span>80%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>POWERPOINT<span>50%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>GOOGLE SHEET<span>30%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                        <div class="progress">
+                            <h3>CANVAS<span>30%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </section>
+    <section class="contactus" id="contactus">
+        <h2 class="heading">Contact<span>Us</span></h2>
+
+    </section>
 
     <script src="index.js">
 
