Contact us and footer Section and Design

--- a/index.html
+++ b/index.html
@@ -188,9 +188,45 @@
     </section>
     <section class="contactus" id="contactus">
         <h2 class="heading">Contact<span>Us</span></h2>
-
+        <form action="#">
+            <div class="input-box">
+                <div class="input-field">
+                    <input type="text" placeholder="Full Name" required>
+                    <span class="focus"></span>
+                </div>
+                 <div class="input-field">
+                    <input type="number" placeholder="Mobile Number" required>
+                    <span class="focus"></span>
+                </div>
+                  <div class="input-field">
+                    <input type="text" placeholder="Email Address" required>
+                    <span class="focus"></span>
+                </div>
+                
+                <div class="input-field">
+                    <input type="text" placeholder="Email Subject" required>
+                    <span class="focus"></span>
+                </div>
+             </div>
+             <div class="textarea-field">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message or Concern" required></textarea>
+                    <span class="focus"></span>
+                
+             </div>
+             <div class="btn-box btns">
+                <button type="submit" class="btn">Submit</button>
+             </div>
+        </form>
     </section>
 
+    <!--Footer Section and Design-->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2025 by Ferdenand| All Rights Reserve.</p>
+        </div>
+
+        <div class="footer-iconTop"><a href="#home"><i class="fas fa-arrow-up"></i></a></div>
+    </footer>
     <script src="index.js">
 
     </script>
