add javascript function toggle and header sticky and navbar active sticky

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <a href="#skill" class="linknavbar">Skills</a>
             <a href="#contactus" class="linknavbar">Contact Us</a>
             <a class="linknavbar">Dark Mode</a>
+
+            <span class="active-nav"></span>
         </nav>
     </header>
 
