--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Home section design-->
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span class="myname">Ferdenand Bayadas</span></h1>
+            <h1>Hi, I'm <span class="myname">Ferdenand Samson Bayadas</span></h1>
             <div class="text-animated">
                 <h3>Web Developer</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore molestias aperiam, sit ratione ea odio eos 
