--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#about" class="linknavbar">About</a>
             <a href="#educational" class="linknavbar">Educational</a>
             <a href="#skill" class="linknavbar">Skills</a>
+            <a href="#project" class="linknavbar">Project</a>
             <a href="#contactus" class="linknavbar">Contact Us</a>
             <a class="linknavbar">Dark Mode</a>
 
@@ -188,6 +189,33 @@
 
         </div>
     </section>
+    <!--Project Section and Design-->
+    <section class="project" id="project">
+        <h2 class="heading">My<span>Project</span></h2>
+        <div class="project-container">
+            <div class="image-project">
+                <img src="/portfolioformobileandweb/img/kapayapaan school.png" class="project-image1">
+            </div>
+                <p class="titleprojects">Kapayapaan School Website</p>
+                <div class="btn-box btns"><a href="#" class="btn">Practice Website</a></div> 
+
+
+            <div class="image-project">
+                <img src="/portfolioformobileandweb/img/e-elearning.png" class="project-image1"/>
+            </div>
+                <p class="titleprojects">E-learning Website</p>
+                <div class="btn-box btns"><a href="#" class="btn">Practice Website</a></div> 
+            
+
+            <div class="image-project">
+                <img src="/portfolioformobileandweb/img/marketing online.png" class="project-image1"/>
+            </div>
+                <p class="titleprojects">Market Online Shop Website</p>
+                <div class="btn-box btns"><a href="#" class="btn">Practice Website</a>   
+        </div>
+
+    </section>
+    <!--Contact Us Section and Design-->
     <section class="contactus" id="contactus">
         <h2 class="heading">Contact<span>Us</span></h2>
         <form action="#">
