add project section and design also image animation

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="image-project">
                 <img src="/portfolioformobileandweb/img/e-elearning.png" class="project-image1"/>
             </div>
-                <p class="titleprojects">E-learning Website</p>
+                <p class="titleprojects">New-learning Website</p>
                 <div class="btn-box btns"><a href="#" class="btn">Practice Website</a></div> 
             
 
