add darkmode and light mode function

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <a href="#skill" class="linknavbar">Skills</a>
             <a href="#project" class="linknavbar">Project</a>
             <a href="#contactus" class="linknavbar">Contact Us</a>
-            <a class="linknavbar">Dark Mode</a>
-
+            <button type="button" id="lightmodes">Light Mode</button>
             <span class="active-nav"></span>
         </nav>
     </header>
