--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     facere iusto autem pariatur voluptatem itaque ducimus, temporibus tempore ad velit! Aliquam, 
                     temporibus repellat.</p>
                     <div class="btn-box">
-                        <a href="#" class="btn">CV</a>
+                        <a href="resume - ferdenand VITA.pdf" download="readable" class="btn">CV</a>
                         <a href="#" class="btn">Let's Talk</a>
                     </div>
             </div>
